<resources>
    <string name="app_name">MAD Asg CacheFlash</string>
    <string name="loginPageTitle">Login</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="newUserText">New user? Click here!</string>

    <string name="createAcctTitle">Create Account</string>
    <string name="confirmCreationText">Create</string>
    <string name="cancelCreationText">Cancel</string>

    <string name="Prompt">Enter your Answer here</string>
    <string name="msg_token_fmt">FCM Token: %s</string>


    <string name="mainLandingPageTitle">Main Page</string>
    <string name="learnTitle">Learn It Yourself!</string>
    <string name="testTitle">Test Yourself!</string>
    <string name="usernamePrompt">Enter username here</string>
    <string name="passwordPrompt">Enter password here</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="btn1">previous</string>
    <string name="btn2">next</string>
    <string name="b2h">Back to Home</string>

    <string name="dashboard">Dashboard (coming soon!)</string>

    <string name="otpText">OTP</string>
    <string name="otpButton">Get OTP</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>

    <string name="ansPrompt">Enter your answer here</string>
    <string name="quote">"Learning never exhausts the mind." - Leonardo da Vinci</string>
    <string name="testQuote">Ready for the test?</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_my_password">Change my password</string>
    <string name="password_must_contain">Password must contain:</string>
    <string name="at_least_6_characters">At least 6 characters</string>
    <string name="at_least_1_number_0_9">At least 1 number(0-9)</string>

    <string name="Email">Email</string>
    <string name="Disclaimer">You have to put the front part of your email before the @ symbol in order for this to work</string>

    <string name="disclaimerfinal">Please set your username to the name before the @ symbol of your email.\n\n i.e. Email: johndoe@gmail.com\nUsername: johndoe</string>
    <string name="title_activity_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Phone">Phone</string>

    <string name="title1">Welcome to CacheFlash!</string>
    <string name="title2">Discover topics to learn and test yourself</string>
    <string name="title3">Time yourself, and set reminders</string>
    <string name="title4">View your learning statistics</string>
    <string name="subtitle1">Your flashcards app for studying anytime, anywhere</string>
    <string name="subtitle2">Click on the text of the flashcard to flip the flashcard, and see the answer.
        \nDone? Feel free to test yourself, with Multiple Choice Questions (MCQ), or open-ended for a challenge.</string>
    <string name="subtitle3">When testing yourself, you can set difficulty levels,
        which the more difficult, allows a stricter time limit. Similarly, you can set a study reminder</string>
    <string name="subtitle4">After doing a quiz, you can see how well you performed.\nEnjoy!</string>

    <string name="goodJob">Good job!</string>
</resources>
