<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".Signup">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textTextInput"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/usernameText"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/darkBlue"
        app:boxStrokeWidth="2dp"
        app:helperTextTextColor="@color/darkBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:textSize="16sp"
            android:drawableLeft="@drawable/ic_profile"
            android:singleLine="true">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textTextInput2"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTextInput"
        android:layout_marginStart="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/passwordText"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/darkBlue"
        app:boxStrokeWidth="2dp"
        app:helperTextTextColor="@color/darkBlue"
        app:hintTextColor="@color/darkBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText4"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="300dp"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp">


        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="235dp"
        android:layout_marginTop="460dp"
        android:backgroundTint="#1400A9"
        android:text="@string/confirmCreationText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="460dp"
        android:backgroundTint="#1400A9"
        android:text="@string/cancelCreationText"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/cacheflash" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="230dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/createAcctTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="358dp"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp"
        android:text="@string/Disclaimer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="41dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="250dp"
        app:srcCompat="@drawable/showpasswordicon" />

</RelativeLayout>